[package]
name = "rt3conf"
version = "0.1.0"
authors = ["Michael Mc Donnell <michael@mcdonnell.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
serde = "1.0.118"
serde_derive = "1.0.118"
serde-big-array = "0.3.0"
