[package]
name = "rt3conf"
version = "0.1.0"
authors = ["Michael Mc Donnell <michael@mcdonnell.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
serde = { version = "1.0.118", features = ["derive"] }
serde-big-array = "0.3.0"
structopt = "0.3.21"

[dev-dependencies]
memoffset = "0.6"